--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   adaptive_theme: ^3.6.0
   easy_localization: ^3.0.7
   lottie: ^3.1.2
+  shared_preferences: ^2.2.3
   
 
 dev_dependencies:
