--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,13 @@ dependencies:
   easy_localization: ^3.0.7
   lottie: ^3.1.2
   shared_preferences: ^2.2.3
+  icons_launcher:
+  image_path: "assets/images/logo.png"
+  platforms:
+    android:
+      enable: true
+    ios:
+      enable: true
   
 
 dev_dependencies:
@@ -72,6 +79,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/lotties/
+    - assets/images/
+    - resources/langs/
  
 
   # An image asset can refer to one or more resolution-specific "variants", see
