--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,13 +43,9 @@ dependencies:
   easy_localization: ^3.0.7
   lottie: ^3.1.2
   shared_preferences: ^2.2.3
-  icons_launcher:
-  image_path: "assets/images/logo.png"
-  platforms:
-    android:
-      enable: true
-    ios:
-      enable: true
+  text_to_speech: ^0.2.3
+  icons_launcher: ^2.1.7
+  
   
 
 dev_dependencies:
@@ -78,8 +74,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/logo.png
     - assets/lotties/
-    - assets/images/
+    
     - resources/langs/
  
 
@@ -108,3 +105,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+icons_launcher:
+  image_path: "assets/logo.png"
+  platforms:
+    android:
+      enable: true
+    ios:
+      enable: true
